# botchain

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  install.ps1  install.sh  loop.sh  loopclaude.sh  loopreview.sh  skill.md
.deps/boost-1.90.0/: b2  project-config.jam
.deps/boost-1.90.0/bin.v2/: project-cache.jam
.deps/boost-1.90.0/boost/: accumulators  align.hpp  any  assert  assign  assign.hpp  beast  beast.hpp  bimap  bimap.hpp  bloom  bloom.hpp  callable_traits  callable_traits.hpp  charconv  charconv.hpp  circular_buffer  circular_buffer.hpp  circular_buffer_fwd.hpp  cobalt  cobalt.hpp  compat  compute  concept_check  container_hash  contract  contract.hpp  contract_macro.hpp  convert  convert.hpp  coroutine2  crc.hpp  cstdfloat.hpp  date_time.hpp  describe  describe.hpp  dll  dll.hpp  endian  endian.hpp  (+106 more)
.deps/boost-1.90.0/boost/detail/: algorithm.hpp  catch_exceptions.hpp  has_default_constructor.hpp  identifier.hpp  is_sorted.hpp  lightweight_main.hpp  lightweight_test.hpp  lightweight_test_report.hpp  lightweight_thread.hpp  named_template_params.hpp  ob_compressed_pair.hpp  quick_allocator.hpp
.deps/boost-1.90.0/boost/exception/: all.hpp  enable_current_exception.hpp  enable_error_info.hpp  errinfo_api_function.hpp  errinfo_errno.hpp  errinfo_file_handle.hpp  errinfo_file_name.hpp  errinfo_file_open_mode.hpp  errinfo_nested_exception.hpp  errinfo_type_info_name.hpp  error_info.hpp  info_tuple.hpp
.deps/boost-1.90.0/boost/functional/: factory.hpp  forward_adapter.hpp  hash  hash.hpp  hash_fwd.hpp  identity.hpp  lightweight_forward_adapter.hpp  overloaded_function  overloaded_function.hpp  value_factory.hpp
.deps/boost-1.90.0/boost/graph/: accounting.hpp  adj_list_serialize.hpp  adjacency_list_io.hpp  adjacency_matrix.hpp  astar_search.hpp  bandwidth.hpp  bc_clustering.hpp  bellman_ford_shortest_paths.hpp  betweenness_centrality.hpp  biconnected_components.hpp  bipartite.hpp  boyer_myrvold_planar_test.hpp  boykov_kolmogorov_max_flow.hpp  bron_kerbosch_all_cliques.hpp  chrobak_payne_drawing.hpp  circle_layout.hpp  closeness_centrality.hpp  clustering_coefficient.hpp  copy.hpp  dimacs.hpp  (+104 more)
.git-rewrite/: backup-refs  commit  index  message  parse  raw-refs
.github/: Dockerfile.arm64
.github/workflows/: build-windows.yml  ghcr.yml  release.yml  windows-build.yml
ci/test/: 03_test_script.sh
cmake/: botcoin-build-config.h.in  randomx.cmake
cmake/module/: GenerateSetupNsi.cmake  Maintenance.cmake
contrib/devtools/: gen-manpages.py
contrib/testgen/: gen_key_io_test_vectors.py
doc/: REST-interface.md  productivity.md
doc/man/: botcoin-cli.1  botcoin-qt.1  botcoin-tx.1  botcoin-util.1  botcoin-wallet.1  botcoin.1  botcoind.1
docs/: lessons-learned-fleet-recovery.md
scripts/: build-release.sh
share/: setup.nsi.in
specs/: INDEX.md  activation.md  addresses.md  agent-ecosystem.md  agent-integration.md  blocks.md  branding.md  consensus.md  genesis.md  network.md  randomx.md  swaps.md  testnets.md  transactions.md
src/: CMakeLists.txt  addrdb.cpp  addrman.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind.cpp  chainparamsbase.cpp  clientversion.cpp  clientversion.h  headerssync.cpp  init.cpp  mine_genesis.cpp  net.cpp  netbase.cpp  pow.cpp  pow.h  random.cpp  randomenv.cpp  validation.cpp  validation.h
src/bench/: CMakeLists.txt
src/common/: args.cpp  netif.cpp  run_command.cpp  settings.cpp  system.cpp  system.h
src/consensus/: amount.h  params.h
src/crypto/: CMakeLists.txt  randomx_hash.cpp  randomx_hash.h
src/init/: common.cpp
src/ipc/: CMakeLists.txt
src/kernel/: CMakeLists.txt  chainparams.cpp
src/node/: blockstorage.cpp  context.cpp  context.h  interfaces.cpp  internal_miner.cpp  internal_miner.h  kernel_notifications.cpp  protocol_version.h  warnings.cpp
src/policy/: feerate.h  policy.cpp
src/qt/: CMakeLists.txt  README.md  bitcoin.cpp  bitcoin.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  coincontroldialog.cpp  createwalletdialog.cpp  guiutil.cpp  intro.cpp  macos_appnap.mm  modaloverlay.cpp  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  qrimagewidget.cpp  receiverequestdialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  signverifymessagedialog.cpp  splashscreen.cpp  utilitydialog.cpp
src/qt/forms/: sendcoinsdialog.ui
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: CMakeLists.txt  optiontests.cpp  test_main.cpp
src/rpc/: blockchain.cpp  external_signer.cpp  mining.cpp  node.cpp  register.h  server.cpp
src/test/: CMakeLists.txt  amount_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockmanager_tests.cpp  key_tests.cpp  miner_tests.cpp  peerman_tests.cpp  pow_tests.cpp  randomx_tests.cpp  system_tests.cpp  util_tests.cpp  validation_tests.cpp
src/test/data/: key_io_valid.json
src/test/fuzz/: CMakeLists.txt
src/test/fuzz/util/: CMakeLists.txt
src/test/util/: mining.cpp  setup_common.cpp
src/util/: CMakeLists.txt  check.cpp  feefrac.h  fs_helpers.cpp  syserror.cpp  tokenpipe.cpp  trace.h
src/wallet/: CMakeLists.txt  feebumper.cpp  init.cpp  sqlite.cpp  wallet.cpp  wallet.h  walletdb.cpp  wallettool.cpp
src/wallet/rpc/: addresses.cpp  wallet.cpp
src/wallet/test/: CMakeLists.txt  util.h
src/wallet/test/fuzz/: CMakeLists.txt
src/zmq/: CMakeLists.txt
test/functional/: feature_genesis.py  feature_loadblock.py  feature_randomx.py  feature_segwit_taproot_genesis.py  interface_rpc.py  p2p_network_magic.py  rpc_createmultisig.py  rpc_decodescript.py  rpc_deriveaddresses.py  rpc_generate.py  rpc_invalid_address_message.py  test_runner.py  wallet_botcoin_addresses.py  wallet_hd.py  wallet_importdescriptors.py  wallet_labels.py  wallet_signer.py  wallet_taproot.py
test/functional/data/: rpc_decodescript.json  rpc_psbt.json
test/functional/mocks/: signer.py
test/functional/test_framework/: address.py  messages.py  script_util.py  segwit_addr.py  util.py
(+83 files in other folders)
